--- a/src/views/users/index.ejs
+++ b/src/views/users/index.ejs
@@ -12,11 +12,13 @@
     <%- include("../partials/header") -%>
 
     <section class="main-container">
+      <div class="btn-add">
+        <a href="/users-add" class="btn btn-primary">Ajouter</a>
+      </div>
       <div>
           <table class="table table-hover">
               <thead>
                 <tr>
-                  <th scope="col">#</th>
                   <th scope="col">Name</th>
                   <th scope="col">Email</th>
                   <th scope="col">Phone</th>
@@ -29,14 +31,13 @@
               <tbody>
                   <% users.forEach(element => { %>
                       <tr>
-                        <th scope="row"><%= element.id %></th>
                         <td><%= element.name %></td>
                         <td><%= element.email %></td>
                         <td><%= element.phone %></td>
                         <td><%= element.gender %></td>
                         <td><%= element.address %></td>
                         <td><%= element.post %></td>
-                        <td><a href="/users/<%= element.id %>">Details</a></td>
+                        <td><a href="/users/<%= element._id %>">Details</a></td>
                       </tr>
                   <% }) %>
               </tbody>
